--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-hot-middleware": "^2.0.0"
   },
   "dependencies": {
+    "atomic-loader": "^0.1.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
   }
