--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "atomic-loader": "^0.1.2",
+    "classnames": "^2.2.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
   }
