--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "atomic-loader": "^0.1.2",
     "classnames": "^2.2.1",
+    "express-session": "^1.12.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^0.2.0",
     "react": "^0.14.0",
